--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="row" id="search">
             <div class="col-md-4 col-md-offset-4">
-                <h1>Enter project details...</h1>
+                <h1>Enter project...</h1>
                 <div class="form form-inline">
                     <div class="form-group">
                         <input type="text" class="form-control" id="username" placeholder="Github username">
